Add title estimate controller to csproj.

--- a/CORS/CORS.csproj
+++ b/CORS/CORS.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\TitleEstimateController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
